kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Ensure HTTP requests are redirected to HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-staging"  # Change to letsencrypt-production when using live certificates
spec:
  ingressClassName: nginx
  rules:
  - host: solar-system-__NAMESPACE__.__INGRESS_IP__.nip.io  # Your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
  tls:
  - hosts:
    - solar-system-__NAMESPACE__.__INGRESS_IP__.nip.io  # Your domain
    secretName: solar-system-tls  # This is the secret where the TLS certificate is stored by cert-manager
